--- a/css/main.css
+++ b/css/main.css
@@ -75,12 +75,8 @@ body {
 	font-family: sans-serif;
 }
 
-.app-header {
-	/* position: fixed;
-	z-index: 100;
-	background: white;
-	width: 100%; */
-}
+
+/* HEADER */
 
 .app-content {
 	/* padding-top: 115px; */
@@ -90,9 +86,9 @@ body {
 	display: none;
 	width: 200px;
 	height: 200px;
-	background-color: transparent;
-	position: absolute;
-	right: 0;
+	background-color: beige;
+	position: fixed;
+	bottom: 0;
 	left: 0;
 	animation-name: updown;
 	animation-duration: 4s;
@@ -105,6 +101,8 @@ body {
 	0% {background-color:red; left:0px; top:200px;}
 }
 
+
+/* HEADER */
 
 .social-icon .fa {
 	align-items: center;
@@ -238,7 +236,6 @@ body {
 	font-size: 17px;
 	transition: 0.4s;
 	transform: scale(1.1);
-
 }
 
 .sticky {
@@ -345,6 +342,7 @@ body {
 	/* background-color: #f6f1f1; */
 	padding: 20px 10px;
 	color: #808080;
+	text-decoration: none;
 }
 
 .nav-item ul li a.front-menu:hover {
@@ -371,10 +369,6 @@ body {
 	left: -45%;
 	z-index: 100;
 }
-
-/* .nav-item ul li ul li {
-	width: 27%;
-} */
 
 .menu-content-list {
 	width: 33%;
@@ -417,8 +411,6 @@ body {
 	margin: 0%;
 }
 
-
-
 .nav-item ul li ul li ul li a:hover {
 	color: #072160;
 	border-radius: 6px;
@@ -428,16 +420,22 @@ body {
 	transition: all 0.5s ease 0s;
 	font-weight: 600;
 }
+@media screen and (min-width: 970px) {
+	.nav-item ul li:hover ul {
+		display: block;
+	}
+}
+/* HEADER */
 
+/* 1st Block */
 #myCarousel .carousel-indicators button {
 	/* background-color: var(--info);; */
 }
 
 #myCarousel .carousel-inner>.carousel-item>img {
-	height: 700px;
+	height: 600px;
 	filter: brightness(.65);
 	object-fit: cover;
-
 }
 
 #myCarousel .carousel-caption {
@@ -463,15 +461,135 @@ body {
 	font-size: 42px;
 	font-weight: 700;
 }
+/* 1st block */
 
-
-
-@media screen and (min-width: 970px) {
-	.nav-item ul li:hover ul {
-		display: block;
-	}
+/* 2nd Block */
+.icons-container {
+	display: flex;
+	flex-wrap: wrap;
+	column-gap: 30px;
+	width: 100%;
+	justify-content: center;
+    /* padding: 0px 20px; */
 }
 
+.vertival-image {
+	max-width: 450px;
+	padding: 1px;
+}
+
+.vertival-image img {
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
+}
+
+.icons-for-best {
+	max-width: 450px;
+	padding-left: 50px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+}
+
+.headline {
+	display: flex;
+	flex-direction: column;
+	padding-top: 100px;
+}
+
+.headline h3 {
+	font-size: 15px;
+	display: block;
+	font-weight: 600;
+	color: var(--blue);;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	line-height: 50px;
+}
+
+.headline h1 {
+	font-size: 30px;
+	font-weight: 800;
+}
+
+.icon-with-text {
+	display: flex;
+	padding-top: 29px;
+    align-items: self-start;
+}
+
+.finance-icons {
+	width: 80px;
+	height: 80px;
+	background-color:#a1b3f5;
+	border-radius: 50%;
+	position: relative;
+	display: flex;
+}
+
+.finance-icons img {
+	position: absolute;
+	top: 15px;
+	/* align-items: center;
+	justify-content: center; */
+	left: 15px;
+	width: 49px;
+}
+
+.icon-details {
+	padding-left: 40px;
+    /* padding-top: 10px; */
+}
+
+.icon-details h1 {
+	font-weight: 600;
+    font-size: 25px;
+    line-height: 1.5;
+	color: var(--blue);;
+    letter-spacing: 1px;
+}
+
+.icon-details h2 {
+	font-size: 20px;
+}
+/* 2nd Block */
+
+/* 3rd Block */
+.services-block {
+    margin: 50px auto;
+}
+
+.services-row {
+	display: flex;
+    flex-wrap: wrap;
+}
+
+.container-animated {
+	animation-name: container-animated;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
+.feature-item {
+	background-color: #ffffff;
+    border-radius: 12px;
+    box-shadow: 0 1px 4px rgb(0 0 0 / 15%);
+    transition: all .5s;
+}
+
+.border-box {
+	display: grid;
+    grid-gap: 10px;
+    padding: 20px;
+    border: 1px solid;
+}
+
+/* Footer */
 .footer {
 	background-color: rgb(20, 19, 19);
 	width: 100%;
@@ -482,8 +600,6 @@ body {
 .max-width-footer {
 	margin: 40px 40px;
 	display: flex;
-	/* flex-direction: row;
-	justify-content: space-between; */
 	padding-top: 40px;
 	padding-bottom: 40px;
 }
@@ -493,12 +609,9 @@ body {
 	display: flex;
 	flex-wrap: wrap;
 	width: 100%;
-	/* flex-direction: row; */
 	justify-content: space-around;
-	/* align-items: center; */
-	/* padding-right: 20px;
-    padding-left: 20px; */
 }
+
 .footer-content h1 {
 	color: white;
 }
@@ -516,7 +629,6 @@ body {
 
 .image-logo-footer {
 	margin-bottom: 20px;
-
 }
 
 .address {
@@ -535,7 +647,6 @@ body {
 	margin-top: 20px;
 }
 
-
 .social-media-links a {
 	width: 37px;
 	height: 37px;
@@ -548,7 +659,7 @@ body {
 }
 
 .social-media-links a:hover {
-	background-color: var(--info);;
+	background-color: var(--info);
 	transition: .3s;
 }
 
@@ -583,15 +694,8 @@ body {
 }
 
 .footer-content-column ul li a:hover {
-	/* color: var(--info);; */
 	color: var(--info);
 }
-
-/* .policy-footer {
-	font-size: 22px;
-    font-weight: 700;
-    letter-spacing: 1px;
-} */
 
 .form-submitt h1 {
 	font-size: 24px;
@@ -663,102 +767,4 @@ input[type=submit]:hover {
 	color: var(--info);;
 	background-color: white;
 }
-
-.icons-container {
-	display: flex;
-	flex-wrap: wrap;
-	column-gap: 30px;
-	width: 100%;
-	justify-content: center;
-    /* padding: 0px 20px; */
-}
-
-.vertival-image {
-	/* width: 50%; */
-	max-width: 450px;
-	padding: 1px;
-	/* padding-left: 50px; */
-	/* padding-right: 50px; */
-}
-
-.vertival-image img {
-	height: 800px;
-	width: 560px;
-	object-fit: cover;
-	/* padding-left: 50px;
-    padding-right: 50px; */
-}
-
-.icons-for-best {
-	/* width: 50%; */
-	max-width: 450px;
-	padding-left: 50px;
-	display: flex;
-	flex-direction: column;
-	justify-content: space-evenly;
-	/* padding-top: 70px;
-    padding-left: 20px; */
-}
-
-.headline {
-	display: flex;
-	flex-direction: column;
-	padding-top: 100px;
-}
-
-.headline h3 {
-	font-size: 15px;
-	display: block;
-	font-weight: 600;
-	color: var(--blue);;
-	text-transform: uppercase;
-	letter-spacing: 2px;
-	line-height: 50px;
-}
-
-.headline h1 {
-	font-size: 30px;
-	font-weight: 800;
-}
-
-.icon-with-text {
-	display: flex;
-	padding-top: 29px;
-
-}
-
-.finance-icons {
-	width: 80px;
-	height: 80px;
-	background-color:#a1b3f5;
-	border-radius: 50%;
-	position: relative;
-	display: flex;
-
-}
-
-.finance-icons img {
-	position: absolute;
-	top: 15px;
-	/* align-items: center;
-	justify-content: center; */
-	left: 15px;
-	width: 49px;
-}
-
-.icon-details {
-	padding-left: 40px;
-    /* padding-top: 10px; */
-}
-
-.icon-details h1 {
-	font-weight: 600;
-    font-size: 25px;
-    line-height: 1.5;
-	color: var(--blue);;
-    letter-spacing: 1px;
-}
-
-.icon-details h2 {
-	font-size: 20px;
-}
+/* Footer */
