--- a/css/main.css
+++ b/css/main.css
@@ -82,23 +82,41 @@ body {
 	/* padding-top: 115px; */
 }
 
+.chat-with-us {
+	align-items: center;
+    background-color: #f6f6f6;
+    border-radius: 50px 50px 50px 50px;
+	filter: drop-shadow(2px 4px 6px grey);
+    padding: 0 0px;
+	cursor: pointer;
+}
+
+.whatsapp {
+	box-sizing: content-box;
+    padding: 5px;
+    background-color: #0cda0c;
+    border-radius: 50%;
+	margin: 5px;
+}
+
+
 #contact-us-animation {
-	display: none;
 	width: 200px;
-	height: 200px;
-	background-color: beige;
+	height: 100px;
 	position: fixed;
 	bottom: 0;
 	left: 0;
 	animation-name: updown;
-	animation-duration: 4s;
+	animation-duration: 10s;
 	animation-iteration-count: infinite;
+	z-index: 100;
 }
 
 @keyframes updown {
-	100%   {background-color:red; left:0px; top:200px;}
-	50%  {background-color:yellow; left:0px; top:0px;}
-	0% {background-color:red; left:0px; top:200px;}
+	100%  { left:0px; bottom:-100px;}
+	50%  {left:0px; bottom:0px;}
+	25%  {left:0px; bottom:0px;}
+	0% {left:0px; bottom: -100px;}
 }
 
 
@@ -465,7 +483,7 @@ body {
 
 /* 2nd Block */
 .icons-container {
-	display: flex;
+	display: none;
 	flex-wrap: wrap;
 	column-gap: 30px;
 	width: 100%;
@@ -495,7 +513,8 @@ body {
 .headline {
 	display: flex;
 	flex-direction: column;
-	padding-top: 100px;
+	padding-top: 50px;
+	color: var(--primary);
 }
 
 .headline h3 {
@@ -514,32 +533,39 @@ body {
 }
 
 .icon-with-text {
-	display: flex;
-	padding-top: 29px;
-    align-items: self-start;
+	flex-direction: column;
+    align-items: center;
 }
 
 .finance-icons {
-	width: 80px;
-	height: 80px;
 	background-color:#a1b3f5;
 	border-radius: 50%;
 	position: relative;
 	display: flex;
+
+	min-width: 200px;
+	min-height: 200px;
+	justify-content: center;
+    align-items: center;
 }
 
 .finance-icons img {
-	position: absolute;
-	top: 15px;
+	/* position: absolute;
+	top: 15px; */
 	/* align-items: center;
 	justify-content: center; */
-	left: 15px;
-	width: 49px;
+	/* left: 15px;
+	width: 49px; */
+	width: 50%;
+	height: 50%;
 }
 
 .icon-details {
-	padding-left: 40px;
-    /* padding-top: 10px; */
+	padding-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+	text-align: center;
 }
 
 .icon-details h1 {
@@ -557,22 +583,46 @@ body {
 
 /* 3rd Block */
 .services-block {
-    margin: 50px auto;
+    margin: 0px auto;
+	max-width: 1140px;
 }
 
 .services-row {
 	display: flex;
     flex-wrap: wrap;
+	justify-content: center;
 }
 
-.container-animated {
-	animation-name: container-animated;
+.services-row > div {
+	
     animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
+	max-width: 230px;
+    margin: 10px;
+}
+
+.services-row > div:nth-child(even) {
+	animation-name: services-anim-1;
+}
+
+.services-row > div:nth-child(odd) {
+	animation-name: services-anim-2;
+}
+
+@keyframes services-anim-1 {
+	0% { transform: translate(0, 0px);}
+	50% {transform: translate(0, 15px);}
+	100% { transform: translate(0, 0px);}
+}
+
+@keyframes services-anim-2 {
+	0% { transform: translate(0, 15px);}
+	50% {transform: translate(0, 0px);}
+	100% { transform: translate(0, 15px);}
 }
 
 .feature-item {
@@ -583,9 +633,13 @@ body {
 }
 
 .border-box {
-	display: grid;
+    
+}
+
+.caption {
+    display: grid;
     grid-gap: 10px;
-    padding: 20px;
+	padding: 20px;
     border: 1px solid;
 }
 
