--- a/css/main.css
+++ b/css/main.css
@@ -658,7 +658,7 @@ body {
 }
 
 .feature-item:hover {
-    transition: 0.5;
+    /* transition: 0.5; */
 	transform: scale(1.1);
 	box-shadow: 0px 10px 10px rgb(0 0 0 / 15%);
 }
@@ -818,7 +818,7 @@ input[type=text] {
 	border-radius: 20px;
 	margin-bottom: 15px;
 	background-color: #343434;
-	color: lightgray !important;
+	color: #ffffff80 !important;
 	box-sizing: border-box;
 	height: 40px;
 	line-height: 40px;
@@ -826,6 +826,10 @@ input[type=text] {
 	box-shadow: none;
 	text-shadow: none;
 	outline: none;
+}
+
+input[type=text]::placeholder,textarea::placeholder {
+	color: #ffffff80 !important;
 }
 
 textarea {
@@ -872,7 +876,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-	color: var(--info);;
+	color: var(--info);
 	background-color: white;
 }
 /* ---Footer--- */
