--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,6 +1,17 @@
 
 /* for tob blue bar */
 @media screen and (max-width: 600px) {
+    .upper-row {
+        justify-content: space-evenly;
+    }
+}   
+@media screen and (max-width: 400px) {
+    .upper-row {
+        padding: 0 0;
+    }
+}
+
+@media screen and (max-width: 360px) {
     .upper-side {
         height: auto;
     }
@@ -26,11 +37,7 @@
     .right-side ul li {
         border-right: none;
     }
-
-  
-
-    
-}   
+}
 
 
 /* screen less than 970px */
@@ -52,6 +59,7 @@
         transition: none;
         transform: scale(1);
         box-shadow: 0.5rem 1.1rem 1.6rem -0.2rem rgb(0 0 0 / 50%);
+        border-radius: 0 0 5px 5px;  
     }
 
     .app-content {
@@ -108,6 +116,8 @@
     #myDiv {
         display: none;
         padding: 10px 0px;
+        overflow-y: scroll;
+        max-height: 80vh;
     }
 
     .nav-item > ul {
@@ -116,10 +126,10 @@
     }
 
     .nav-item > ul > li {
-        padding: 15px 0;
+        /* padding: 15px 0; */
         position: relative;
         width: 100%;
-        border-bottom: 1px solid lightgrey;
+        /* border-bottom: 1px solid lightgrey; */
 
     }
 
