--- a/css/mobile.css
+++ b/css/mobile.css
@@ -83,10 +83,7 @@
         display: flex;
         width: auto;
         padding: 10px 10px;
-        border: 1px solid black;
-        right: 35px;
-        left: auto;
-        top: 20%;
+        /* border: 1px solid black; */
         justify-content: center;
     }
 
