--- a/css/main.css
+++ b/css/main.css
@@ -607,8 +607,16 @@ body {
 
 /* ---3rd Block--- */
 .services-block {
-    margin: 50px auto;
+    margin: 85px auto;
 	max-width: 1140px;
+}
+
+.headline-for-services h1 {
+	color: #00267a;
+    font-size: 35px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    border-bottom: 2px dotted #00267a;
 }
 
 .services-row {
@@ -618,7 +626,6 @@ body {
 }
 
 .services-row > div {
-	
     animation-duration: 3s;
     animation-iteration-count: infinite;
     animation-timing-function: ease-in-out;
@@ -727,7 +734,8 @@ body {
 } */
 
 /* for desktop view */
-@media (min-width: 768px) {
+
+@media (min-width: 600px) {
 	#carouselExampleControls .carousel-inner {
 	  display: flex;
 	}
